RESOLVED FIXED61247
[Qt] Fix Policy Delegate in Qt DRT
https://bugs.webkit.org/show_bug.cgi?id=61247
Summary [Qt] Fix Policy Delegate in Qt DRT
Robert Hogan
Reported 2011-05-22 07:21:26 PDT
[Qt] Fix Policy Delegate in Qt DRT
Attachments
Patch (5.71 KB, patch)
2011-05-22 07:23 PDT, Robert Hogan
no flags
Patch (7.39 KB, patch)
2011-05-22 10:45 PDT, Robert Hogan
kenneth: review+
Robert Hogan
Comment 1 2011-05-22 07:23:25 PDT
Kenneth Rohde Christiansen
Comment 2 2011-05-22 07:51:19 PDT
Comment on attachment 94341 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=94341&action=review > Source/WebKit/qt/ChangeLog:7 > + https://bugs.webkit.org/show_bug.cgi?id=61247 > + Would be good with a description on what you actually did :-)
Robert Hogan
Comment 3 2011-05-22 10:45:35 PDT
Robert Hogan
Comment 4 2011-05-22 10:48:07 PDT
(In reply to comment #2) > (From update of attachment 94341 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=94341&action=review > > > Source/WebKit/qt/ChangeLog:7 > > + https://bugs.webkit.org/show_bug.cgi?id=61247 > > + > > Would be good with a description on what you actually did :-) It certainly would! I meant to unmark the r? after I uploaded it as I posted it to make it easier to apply to the QBAT VM. Updated patch.
Robert Hogan
Comment 5 2011-05-22 12:34:19 PDT
Note You need to log in before you can comment on or make changes to this bug.