2011-05-22  Robert Hogan  <robert@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        Fix policyDelegate in Qt DRT
        https://bugs.webkit.org/show_bug.cgi?id=61247

        * platform/qt/Skipped: Unskip fast/encoding/mailto-always-utf-8.html
        * platform/qt/fast/forms/mailto/formenctype-attribute-button-html-expected.txt: Removed.
        * platform/qt/fast/forms/mailto/formenctype-attribute-input-html-expected.txt: Removed.
2011-05-22  Robert Hogan  <robert@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        Fix policyDelegate in Qt DRT

        https://bugs.webkit.org/show_bug.cgi?id=61247

        Use the 'policy delegate' implemented in FrameLoaderClient
        for layout tests. The partial implementation in DumpRenderTreeQt
        is redundant.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::dispatchDecidePolicyForNavigationAction):
2011-05-22  Robert Hogan  <robert@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        Fix policyDelegate in Qt DRT
        https://bugs.webkit.org/show_bug.cgi?id=61247

        Use the 'policy delegate' implemented in FrameLoaderClient
        for layout tests. The partial implementation in DumpRenderTreeQt
        is redundant, so remove it.

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::WebPage::acceptNavigationRequest):
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::waitForPolicyDelegate):

Canonical link: https://commits.webkit.org/76632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87043 268f45cc-cd09-0410-ab3c-d52691b4dbfc